--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django = "*"
 psycopg2 = "*"
 django-crispy-forms = "*"
 django-allauth = "*"
+pillow = "*"
+markdown = "*"
+django-pagedown = "*"
 
 [requires]
 python_version = "3.7"
